# CORE

./: .coveragerc  .env.canary  .env.copy  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_ANATOMY.md  CORE_audit_renderer_full_refactor.md  CORE_audit_renderer_refactor_analysis.md  CORE_grok_analysis_2026.md  Dockerfile  GH_STATUS.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  add_filepath_comments.py  assesment.prompt  audit.txt  audit_output.txt  baseline_errors.txt  check.txt  check_env.py  checks.txt  cleanup.sh  concat_project.sh  conftest.py  constitutional_bundle.txt  context_core.txt  context_package_snapshot.txt  core-refactor.cast  core.tx  (+48 more)
.archive/: autonomous_developer.py  chat.py  check_patterns.py  clarity.py  cli_utils.py  client_orchestrator.py  coverage.py  enrich.py  from_manifest.py  full_project_remediation.py  hub.py  inspect.py  inspect_decisions.py  inspect_patterns.py  inspect_refusals.py  pattern_evaluator.py  pattern_validator.py  rule_document.schema.json  steps.py  validator_service.py
.archive/LEGACY_ARCHIVE/: atomic_actions_checker.py  pattern_checker.py
.archive/manage/: __init__.py  database.py  dotenv.py  keys.py  manage.py  patterns.py  policies.py  proposals.py  vectors.py
.claude/: .nfs00000000001a032c00000009  .nfs00000000001a034400000001  .nfs00000000001a035e0000000b  .nfs00000000001a589900000008  settings.json  settings.local.json
.docker/core-engine/: Dockerfile  entrypoint.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md:  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deature_request.yml  docs_request.yml  enhancement_proposal.yml  epic.yml  feature.yml  feature_request.yml  governance_proposal.yml
.github/workflows/: ci.yml  core-ci.yml  daily_sync.yml  docs.yml  governance.yml  guard-and-drift.yml  intent-validate.yml  nightly-audit.yml  publish-docker-audit-gate.yml  publish-pypi.yml  (+1 more)
.gitlab-ci/: CORE.gitlab-ci.yml
.intent/: CHANGELOG.md  CORE-A3-plan.md  CORE-CHARTER.md  change_log.json  daily_loop.md  meta.yaml  project_manifest.yaml  remediation_catalog.yaml
.specs/: CONTRIBUTOR-MINDSET.md  CORE-CHARTER.md
artifacts/: cli_conversion_clusters.json  cli_conversion_clusters.md  cli_inventory.json  cli_inventory.md
core/: processing.py
core-arxiv/: main.bbl  main.blg
demos/: use_claude.sh  use_deepseek.sh
docs/: 00_START_HERE.md  00_WHAT_IS_CORE.md  01_PHILOSOPHY.md  02_ARCHITECTURE.md  03_GOVERNANCE.md  04_ROADMAP.md  05_BYOR.md  05_TECHNICAL_DEBT.md  06_STARTER_KITS.md  07_PEER_REVIEW.md  08_CONTEXT_AND_COMPARISONS.md  09_WORKED_EXAMPLE.md  10_API_REFERENCE.md  10_CAPABILITY_REFERENCE.md  11_ACADEMIC_PAPER.md  12_ACADEMIC_PAPER.md  13_ACADEMIC_PAPER.md  BATCH_MODE.md  CORE_RESTRUCTURE_PLAN.md  CORE_SYSTEM_MAP.md  DB_Governance_and_Usage.md  EMBEDDINGS.md  Enforcement roadmap.md  Enforcement_Template_System.md  Intent Governance Doc.md  MIGRATION_GUIDE.md  NORTH_STAR.md  PATTERN_VECTORIZATION_SYSTEM.md  PHASE_1_COMPLETE.md  PHASE_1_INSTALLATION_CHECKLIST.md  Pragmatic_Test_Generation.md  SECRETS_MANAGEMENT.md  StrategicPlan.md  THE_VISION.md  TheDocument.md  autonomy-ladder.md  autonomy_ladder.md  byor-quickstart.md  cli-reference.md  cold-reviewer.md  (+10 more)
grc-catalogs/: inventory.yaml
hooks/: check_symbol_ids.py
my-final-app/: README.md  pyproject.toml
my-test-app/: .gitignore  README.md  pyproject.toml
packs/: architectural_boundaries.yaml  python_hygiene.yaml  starter_python.yaml
proposals/: P-LOCAL-DEMO.yaml
reports/: audit_auto_ignored.json  audit_auto_ignored.md  audit_findings.json  audit_findings.processed.json  cli_help_context.txt  constitution_bundle.txt  constitutional_bundle.txt  constitutional_review.md  docs_clarity_bundle.txt  docs_clarity_review.md  drift_report.json  manual_review_package.txt  policy_graph_closure.json  pytest-report.html
scripts/: ai_test_scavenger.py  assesment.prompt  assign_capability_ids.py  autonomous_testing.sh  bootstrap_ignore_list.py  bootstrap_issues.sh  build_llm_context.py  check_adr_phases.py  check_readme_counts.sh  check_test_db_connection.py  coldroom-prep.sh  concat_bundle.py  concat_bundle2.py  concat_intent.sh  concat_project.sh  core-cli-vm-prep.sh  create_qdrant_collection.py  debug_orphans.py  debug_pattern_matching.py  debug_service.py  debug_view.py  demo.sh  demo_graph_context.py  diagnose_auditor_discovery.py  diagnose_auditor_discovery_v2.py  diagnose_auditor_instantiation.py  export_core_context.py  final_import_fixes.sh  find_broken_links.py  find_longest_files.sh  find_unvectorized_symbols.py  finish_orphans.py  fix_all_imports.sh  fix_duplicate_class.py  fix_imports.py  fix_loggers.py  fix_symbol_formats.py  force_fix_orphans.py  generate_enforcement_coverage_map.py  generate_hierarchical_coverage_summary.py  (+32 more)
sql/: 001_consolidated_schema.sql  001_init.sql  002_capability_domains.sql  002_catalog.sql  002_runtime_configuration.sql  003_capability_domains_idx.sql  003_implementations.sql  004_refactor_to_symbols.sql  005_add_symbol_key.sql  006_knowledge_graph_view.sql  007_capabilities_registry.sql  008_operational_tables.sql  009_domain_and_vector_tables.sql  00X_agent_memory.sql  2025-11-11_create_context_packets.sql  db_schema_init.sql  decorator_metadata_schema.sql
src/: main.py  test_hello.py  utils.py
src/work/my-first-ai-app/: README.md  pyproject.toml
src/work/my-first-ai-app/.intent/: README.md  project_manifest.yaml  safety_policies.yaml
tests/: conftest.py  test_env_loading.py  test_import_graph.py  test_main.py  test_main__health_check.py  test_schema_drift.py  test_smoke_asyncio.py  test_smoke_db.py  test_smoke_runtime.py  test_template.py  test_test.py  test_test__hello_world.py  test_verify_complexity_promotion.py
tools/: cli_conversion_clusters.py  cli_inventory.py
var/: d6-stage-c-migration-plan.md
web/: .gitignore  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+4519 files in other folders)
