[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "core"
version = "2.3.0"
description = "CORE: A self-governing, intent-driven software development system."
authors = ["Dariusz Newecki <d.newecki@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "api", from = "src" },
    { include = "body", from = "src" },
    { include = "cli", from = "src" },
    { include = "mind", from = "src" },
    { include = "shared", from = "src" },
    { include = "will", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.38.0" }

# Database (Async)
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.31.0"
alembic = "^1.13.0"

# Configuration & Validation
pydantic = "^2.11"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.0.0"

# Security
cryptography = "^42.0.0"

# CLI & UI
typer = { extras = ["rich"], version = "^0.16.1" }
rich = "^13"

# Data Processing
pyyaml = "^6.0"
ruamel-yaml = "^0.19.0"
jsonschema = "^4"
httpx = "^0.28.0"

# Code Quality Tools
black = "^25"
radon = "^6.0.1"
sqlparse = "^0.5.3"

# Vector Database
qdrant-client = "^1.9.0"

# Scientific Computing
numpy = "^2.3.2"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"

# Graph Analysis
networkx = "^3.3"

# Utilities
filelock = "^3.13.0"

# Dependency Injection
dependency-injector = "^4.42.0"

# Observability (Optional)
opentelemetry-api = { version = "^1.21.0", optional = true }
opentelemetry-sdk = { version = "^1.21.0", optional = true }
opentelemetry-instrumentation-fastapi = { version = "^0.42b0", optional = true }
opentelemetry-instrumentation-sqlalchemy = { version = "^0.42b0", optional = true }
openai = "^2.26.0"

[tool.poetry.extras]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-cov = "^6.0"
pytest-dotenv = "^0.5.2"
aiosqlite = "^0.21.0"

# Code Quality
pre-commit = "^3.7.1"
mypy = "^1.11"
ruff = "^0.14.8"

# Documentation
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"

# Development Tools
httpx = "^0.28.1"
ipython = "^8.12"
anyio = "^4.11.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
radon = "^6.0.1"
vulture = "^2.14"
pip-audit = "^2.10.0"
bandit = "^1.9.2"

[tool.poetry.scripts]
core-admin = "cli.admin_cli:app"
core = "cli.cli_user:app"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | logs
  | sandbox
  | pending_writes
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    "sandbox",
    "pending_writes",
    "scripts",
    "dev-scripts",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "RUF",
    "ASYNC",
]
ignore = [
    "E402",
    "E501",
    "B008",
    "B904",
    "B007",
    "SIM102",
    "SIM117",
    "C401",
    "C408",
    "C414",
    "N806",
    "F841",
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
lines-between-types = 0
known-first-party = ["api", "body", "features", "mind", "services", "shared", "will"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B008", "F403"]

# --- Migrated from pytest.ini ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# pytest-dotenv
env_files = [".env.test"]
env_override_existing_values = true

# logging
log_cli = true
log_cli_level = "INFO"

# options
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html:reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "-m",
    "not trio",
]

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow running tests",
    "trio: marks tests to run with trio backend (skipped by default)",
]

# --- Migrated from mypy.ini ---
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
# Global: only catch catastrophic errors
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.features.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.will.tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.mind.logic.engines.ast_gate.*"
ignore_errors = false

# --- Migrated from .coveragerc ---
[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
parallel = true
omit = [
    "src/features/self_healing/*",
    "src/features/autonomy/*",
    "src/mind/governance/checks/*",
    "src/features/maintenance/*",
    "src/features/project_lifecycle/*",
    "src/features/introspection/*",
    "tests/*",
]

[tool.coverage.paths]
source = [
    "src",
    "*/src",
]

[tool.coverage.report]
fail_under = 45
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError.*unreachable",
]

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"
pretty_print = true
