[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "core-runtime"
version = "2.8.0"
description = "CORE: executable constitutional governance for AI-assisted software development."
authors = [
    { name = "Dariusz Newecki", email = "d.newecki@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = [
    "governance",
    "audit",
    "ci",
    "constitutional",
    "software-factory",
    "code-quality",
    "intent-driven",
    "ai-assisted",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # Web Framework
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    # Database (Async)
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    # Configuration & Validation
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # Security
    "cryptography>=48.0.1,<49.0.0",
    "PyJWT>=2.8,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "email-validator>=2.0,<3.0",
    # CLI & UI
    "typer>=0.16.1,<0.17.0",
    "rich>=13,<16",
    # Data Processing
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.26.0,<5",
    "httpx>=0.28.0,<0.29.0",
    # Code Quality Tools
    "black>=26.3.1,<27.0.0",
    "radon>=6.0.1,<7.0.0",
    "sqlparse>=0.5.3,<0.6.0",
    # Vector Database
    "qdrant-client>=1.18.0,<2.0.0",
    # Scientific Computing
    "numpy>=2.5.0,<3.0.0",
    "scikit-learn>=1.5.1,<2.0.0",
    # Utilities
    "msgpack>=1.2.1,<2.0.0",
    "filelock>=3.13.0,<4.0.0",
    "pathspec>=1.1.0,<2.0.0",
    # Dependency Injection
    "dependency-injector>=4.42.0,<5.0.0",
    # Rate limiting (optional Redis backend)
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
# Migration scripts (Optional) — install via `pip install core-runtime[migration]`
migration = [
    "ruamel-yaml>=0.19.0,<0.20.0",
]

# Observability (Optional) — install via `pip install core-runtime[telemetry]`
telemetry = [
    "opentelemetry-api>=1.21.0,<2.0.0",
    "opentelemetry-sdk>=1.21.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0,<0.43",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0,<0.43",
]

[project.urls]
Homepage = "https://github.com/DariuszNewecki/CORE"
Repository = "https://github.com/DariuszNewecki/CORE"
Documentation = "https://dariusznewecki.github.io/CORE/"

[project.scripts]
core-admin = "cli.admin_cli:app"

# Poetry-specific configuration that PEP 621 does not model.
# Package discovery (src/ layout) and the dev dependency group stay here.
[tool.poetry]
packages = [
    { include = "api", from = "src" },
    { include = "body", from = "src" },
    { include = "cli", from = "src" },
    { include = "mind", from = "src" },
    { include = "shared", from = "src" },
    { include = "will", from = "src" },
]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0"
pytest-asyncio = "^1.4"
pytest-mock = "^3.15.1"
pytest-cov = "^6.0"
pytest-dotenv = "^0.5.2"
aiosqlite = "^0.21.0"

# Code Quality
pre-commit = "^3.7.1"
mypy = "^1.11"
types-PyYAML = "^6.0"
types-jsonschema = "^4.0"
ruff = "^0.15.20"

# Documentation
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"

# Development Tools
httpx = "^0.28.1"
ipython = "^8.12"
anyio = "^4.11.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
vulture = "^2.14"
pip-audit = "^2.10.0"
bandit = "^1.9.2"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | logs
  | sandbox
  | pending_writes
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    "sandbox",
    "pending_writes",
    "scripts",
    "dev-scripts",
    "tests",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "RUF",
    "ASYNC",
]
ignore = [
    "E402",
    "E501",
    "B008",
    "B904",
    "B007",
    "SIM102",
    "SIM117",
    "C401",
    "C408",
    "C414",
    "N806",
    "F841",
    # UP042: we use str+Enum intentionally (StrEnum has different Pydantic serialization)
    "UP042",
    # ASYNC240: fires on asyncio codebases; rule targets trio/anyio path wrappers we don't use
    "ASYNC240",
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
lines-between-types = 0
known-first-party = ["api", "body", "mind", "shared", "will"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B008", "F403"]

# --- Migrated from pytest.ini ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# pytest-dotenv
env_files = [".env.test"]
env_override_existing_values = true

# logging
log_cli = true
log_cli_level = "INFO"

# options
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--cov=src",
    "--cov-report=html:reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "-m",
    "not trio",
]

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow running tests",
    "trio: marks tests to run with trio backend (skipped by default)",
]

# --- Migrated from mypy.ini ---
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
# Global: only catch catastrophic errors
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.will.tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.mind.logic.engines.ast_gate.*"
ignore_errors = false

# Third-party packages with no published stubs
[[tool.mypy.overrides]]
module = ["radon.*", "sklearn.*"]
ignore_missing_imports = true

# Internal modules referenced via optional/lazy imports that may be absent
# (orphaned dead code or optional extensions not present in all installs)
[[tool.mypy.overrides]]
module = [
    "mind.governance.enforcement.async_units",
    "mind.governance.enforcement.base",
    "mind.governance.enforcement.sync_units",
    "mind.governance.checks.rule_enforcement_check",
    "body.self_healing.cluster_inspector",
    "body.self_healing.common_knowledge_inspector",
    "body.quality.test_target_classifier",
    "body.introspection.vectorization_service",
    "will.agents.capability_tagger_agent",
    "shared.infrastructure.paths",
]
ignore_missing_imports = true

# --- Migrated from .coveragerc ---
[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
omit = [
    "tests/*",
]

[tool.coverage.paths]
source = [
    "src",
    "*/src",
]

[tool.coverage.report]
# Coverage gate is opt-in via `--cov-fail-under=45` on the command line
# (Makefile `test` target + CI workflow). Moved out of pyproject so dev
# subset runs don't trip the gate when their tests pass.
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError.*unreachable",
]

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"
pretty_print = true
