[tool.poetry]
name = "fastapi-hello-world"
version = "0.1.0"
description = "A simple FastAPI web server that returns hello world"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
